--- a/docs/manual.bib
+++ b/docs/manual.bib
@@ -675,3 +675,11 @@ archivePrefix = "arXiv",
    publisher = {ACM},
    address = {New York, NY, USA},
 }
+
+@inproceedings{krylov2008metrized,
+  title={Metrized Small World Properties Based Data Structure.},
+  author={Krylov, Vladimir and Logvinov, Andrey and Ponomarenko, Alexander and Ponomarev, Dmitry},
+  booktitle={SEDE},
+  pages={203--208},
+  year={2008}
+}
